[package]
name = "contacts_integrity"
version = "0.0.1"
authors = ["nickolie.pangarungan@gmail.com", "tats@beyonder.systems"]
edition = "2018"

[lib]
name = "contacts_integrity"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
derive_more = "0"
serde = "1"
holochain_deterministic_integrity = "=0.0.10"
hc_contacts_integrity = {git = "https://github.com/holochain-open-dev/contacts", rev = "df75ac086e65adf1751199fe931f5ce8c1762017", package = "contacts_integrity"}
